<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_calendario" />
        <item
            android:id="@+id/nav_materias"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_materias" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/menu_notificaciones" />
    </group>

    <item android:title="@string/menu_opciones_adicionales">
        <menu>
            <item
                android:id="@+id/nav_crear_materia"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_crear_materia" />
            <item
                android:id="@+id/nav_gestionar_estudiantes"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_gestionar_estudiantes" />
            <item
                android:id="@+id/nav_perfil"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/menu_perfil" />
        </menu>
    </item>
</menu>